syntax = "proto3";
package poktroll.servicer;

option go_package = "poktroll/x/servicer/types";

message Claim {
    string session_id = 1;
    uint64 session_number = 2;
    uint64 committed_height = 3;
    bytes smst_root_hash = 4;
    string servicer_address = 5;
}